Add delete method to CompactRecord class. Add fields required for connection with db. Change all files to modules, so they will work with import statements. Rename columns and fields in CompactRecord so it will be compatible with db. Add test functions to index.mjs.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "kompakty",
   "version": "0.0.1",
   "description": "Aplikacja zarządzająca kolekcją kompaktów",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.mjs"
   },
   "repository": {
     "type": "git",
